--- a/docs/morrowindlayout.css
+++ b/docs/morrowindlayout.css
@@ -95,7 +95,7 @@ ul {
   margin: 0 auto;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
+/*  background-color: #333;*/
   
   position: sticky;
   top: 0;
