--- a/docs/staticSearch/ssSearch.css
+++ b/docs/staticSearch/ssSearch.css
@@ -140,10 +140,10 @@ div#ssResults > div#ssPagination > button{
 
 /* Alternate bg colour. */
 div#ssResults>ul>li:nth-child(2n) {
-    background-color: rgb(240, 240, 240);
+    background-color: rgba(240, 200, 50,0.5);
     transition: background-color .5s;
-    border-top: 1px solid rgb(230, 230, 230);
-    border-bottom: 1px solid rgb(230, 230, 230);
+    border-top: 1px solid rgb(230, 200, 100);
+    border-bottom: 1px solid rgb(230, 200, 100);
 }
 /* Larger document titles */
 div#ssResults>ul>li>div>a{
@@ -268,3 +268,120 @@ body.ssSearching:not(.ssLoading) div#ssSearching, body.ssLoading:not(.ssSearchin
     display: block;
 }
 
+
+
+body {
+  font-family: "Lucida Console", Courier, monospace;
+  background-color:#F9DB9C;
+}
+img {
+   
+   width:500px;
+   height:600px;
+ 
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+h1 {
+    text-align:center;
+    font-size: 35px;
+}
+h2 {
+    text-align:center;
+}
+/* Style the header */
+.header {
+  background-color: #FABD4B;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  font-family: "Lucida Console", Courier, monospace;
+}
+
+/* Container for flexboxes */
+.row {
+  
+  display: flex;
+}
+
+/* Creates three unequal columns that sit next to each other */
+.column {
+  padding: 10px;
+  background-color:#F9DB9C;
+}
+
+/* Left and right column */
+.column.side {
+   
+
+   flex: 1;
+}
+
+/* Middle column */
+.column.middle {
+ 
+  flex: 2;
+}
+
+/* Style the footer */
+.footer {
+  background-color: #f1f1f1;
+  padding: 10px;
+  text-align: center;
+  background-image: url(images/books.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: white;
+    
+}
+.footer img {
+  margin-top: 8px;
+  top: 795px;
+  right: 160px;
+  width: 128px;
+  height: 100px;
+  border-color: #FABD4B;
+  border-width: thick;
+  position: absolute;
+  
+}
+
+
+@media (max-width: 600px) {
+  .row {
+
+    flex-direction: column;
+  }
+}
+
+
+ul {
+  list-style-type: none;
+  margin: 0 auto;
+  padding: 0;
+  overflow: hidden;
+/*  background-color: #333;*/
+  
+  top: 0;
+}
+
+li {
+  float:inherit;
+  border-right: 1px solid #bbb;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+.active {
+  background-color: #E39439;
+}
