fix css and links

--- a/docs/librarium/bookSpine.css
+++ b/docs/librarium/bookSpine.css
@@ -70,39 +70,35 @@ section {
      
  }
  
- .nav {
+.nav {
   list-style-type: none;
+  margin: 0 auto;
   padding: 0;
   overflow: hidden;
 /*  background-color: #333;*/
-  font-family: "Lucida Console", Courier, monospace;
   position: sticky;
   top: 0;
-
-  }
-.nav ul{
-  margin:0 auto;
-  display:table;
+  display: table;
 }
-.nav li {
+
+li {
   float:inherit;
-  padding:0;
-  border-right: 1px solid #bbb;
+  border-right: 1px solid;
   display:inline-block;
-  }
-  .nav li a{
+}
+
+li a {
   display: block;
   color: white;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  }
-  
-  .nav li a:hover{
+}
+
+li a:hover {
   background-color: #e37839;
-  }
-  
- 
-  .active {
+}
+
+.active {
   background-color: #E39439;
 }
